Updated design and made the javascript more robust

--- a/css/sign_changer.css
+++ b/css/sign_changer.css
@@ -1,6 +1,9 @@
 body{
 	text-align : center;
-	background-image : url('../img/old_moon.png');
+	background-image : url('../img/dark_wood.png');
+	font-weight : bold;
+	color : #ddd;
+	font-family : 'Montserrat', sans-serif;
 }
 
 #result_row{
@@ -10,14 +13,13 @@ body{
 	text-align:left;
 }
 
-footer{
-	padding : 5px;
+div[data-role=footer]{
+	padding : 10px;
 }
 
-#header-row,footer{
-	background-color:#AABEF4;
-	margin-top : 5px;
-	border-radius : 25px;
+#header-row,div[data-role=footer]{
+	background-color : rgba(1,1,1,0.3);
+	border-radius : 5px;
 }
 
 #header-row h2{
@@ -35,4 +37,14 @@ footer{
 
 .results-list{
 	list-style-type : none;
+	color : #444;
+}
+
+textarea{
+	color : #444;
+	border-radius : 5px;
+}
+
+a:hover{
+	text-decoration:none;
 }
